--- a/config_template.json
+++ b/config_template.json
@@ -1,3 +1,11 @@
 {
-  "discord_token": "RENAME THE FILE TO config.json THEN OUT YOUR TOKEN HERE"
+  "discord_token": "RENAME THE FILE TO config.json THEN OUT YOUR TOKEN HERE",
+  "botImageURL": "https://cdn.discordapp.com/avatars/173261518572486656/a_63b6f52a118e915f11bc771985a078c8.gif?quality=lossless&size=4096",
+  "botColor": "#003865",
+  "adminControllerRoleId": "000000000000000000000",
+  "botCompanyName": "Volmit Software",
+  "botPrefix": "",
+  "xpBaseMultiplier": 1.0,
+  "botOwnerID": "000000000000000000000",
+  "catApiToken": "word_01234567890123456789012345678901234567890123456789"
 }
