--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   build_runner: ^2.4.6
   dynamic_config_generator: ^0.4.0
   envied: ^0.5.2
+  http: ^1.1.1
   nyxx: ^6.0.2
   nyxx_commands:
     git:
@@ -23,4 +24,4 @@ dependencies:
 
 
 dev_dependencies:
-  lints: ^1.0.1
+  lints: ^3.0.0
