--- a/config_template.json
+++ b/config_template.json
@@ -6,5 +6,5 @@
   "botPrefix": "",
   "xpBaseMultiplier": 1.0,
   "botOwnerID": "000000000000000000000",
-  "catApiToken": "word_01234567890123456789012345678901234567890123456789"
+  "openAiToken": "0000000000[OPTIONAL]00000000000"
 }
