--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ environment:
 dependencies:
   build_runner: ^2.4.6
   dart_openai: ^5.0.0
+  fast_log: ^1.0.7
   http: ^1.1.1
+  image: ^4.1.3
   nyxx: ^6.0.2
   nyxx_commands:
     git:
