--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   dart_openai: ^5.0.0
   fast_log: ^1.0.7
   http: ^1.1.1
-  image: ^4.1.3
+  image: 3.0.1
   nyxx: ^6.0.2
   nyxx_commands:
     git:
