--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,11 @@ dependencies:
   fast_log: ^1.0.7
   http: ^1.1.1
   image: 3.0.1
-  nyxx: ^6.0.2
-  nyxx_commands:
-    git:
-      url: https://github.com/nyxx-discord/nyxx_commands.git
-      ref: dev
+  nyxx: ^6.0.3
+#    git:
+#      url: https://github.com/nyxx-discord/nyxx_commands.git
+#      ref: dev
+  nyxx_commands: ^6.0.1
   nyxx_extensions: ^4.1.0
 
 
